# videobookmarks

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 4d8f0c20470e_add_table_to_delete_tag_list.py  83f79d5fe03b_initial_tables.py  9ca0836bdedb_convert_deleted_table_into_a_column_on_.py  e3665b9f68e3_add_thumbnail_and_title_to_database.py
containers/ml_pipeline_containers/emotion_transformation/: Dockerfile  lambda_function.py  requirements.txt
flaskr/: schema.sql
notebooks/: emotion_detection - aQoFrRq6Ds8.csv  emotion_detection.ipynb
tests/: conftest.py  data.sql  fixtures.py  test_auth.py  test_blog.py  test_datamodel.py  test_db.py  test_factory.py  test_tag_list.py
videobookmarks/: __init__.py  auth.py  authenticate.py  db.py  schema.sql  tag.py  tag_list.py
videobookmarks/datamodel/: datamodel.py
videobookmarks/static/: gtm.js  index.js  style.css  tagging.js  view.js
videobookmarks/templates/: base.html
videobookmarks/templates/auth/: login.html
videobookmarks/templates/authenticate/: register.html
videobookmarks/templates/tag_list/: create.html  index.html  tagging.html  video_tags.html  view.html
